# fhir-integration-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/resources/: fhir_handler.py
